<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/Black"
    android:layout_gravity="center"
    >

    <TextView
        android:id="@+id/output"
        android:layout_width="393dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/output"
        android:textAlignment="textEnd"
        android:textColor="@color/White"
        android:textSize="40sp"
        tools:ignore="MissingConstraints,RtlCompat" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="592dp"
        android:layout_below="@+id/output"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Silver"
                android:text="@string/one"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="341dp" />

            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Silver"
                android:text="@string/two"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="341dp" />

            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Silver"
                android:text="@string/three"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="341dp" />

            <Button
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Orange"
                android:text="@string/plus"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="341dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Silver"
                android:text="@string/four"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="341dp" />

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Silver"
                android:text="@string/five"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="341dp" />

            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Silver"
                android:text="@string/six"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="341dp" />

            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Orange"
                android:text="@string/minus"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="341dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Silver"
                android:text="@string/seven"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="341dp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Silver"
                android:text="@string/eight"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="341dp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Silver"
                android:text="@string/nine"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="341dp" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Orange"
                android:text="@string/multiply"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="341dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Gray"
                android:text="@string/clear"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="341dp" />

            <Button
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Gray"
                android:text="@string/zero"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="341dp" />

            <Button
                android:id="@+id/equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Gray"
                android:text="@string/equals"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="341dp" />

            <Button
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/Orange"
                android:text="@string/divide"
                android:textColor="@color/Black"
                android:textSize="15sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="341dp" />
        </LinearLayout>

        <Button
            android:id="@+id/advance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/Orange"
            android:text="@string/advance"
            android:textColor="@color/Black"
            android:textSize="15sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="341dp" />

        <Button
            android:id="@+id/historyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/Orange"
            android:text="HISTORY"
            android:textColor="@color/Black"
            android:textSize="15sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="341dp" />

        <TextView
            android:id="@+id/history"
            android:layout_width="370dp"
            android:layout_height="195dp"
            android:text="@string/history"
            android:textColor="@color/White"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="525dp"
            android:visibility="gone"/>
    </LinearLayout>

</RelativeLayout>